objects/ssot__ForecastItemOwnerVersionAmount__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdjustedAmount__c</fullName>
        <label>Adjusted Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AdjustedQuantity__c</fullName>
        <label>Adjusted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AdjustmentNoteText__c</fullName>
        <label>Adjustment Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessPeriodId__c</fullName>
        <label>Business Period</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustomDimensionText__c</fullName>
        <label>Custom Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastCustomCategory__c</fullName>
        <label>Forecast Custom Category</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastType__c</fullName>
        <label>Forecast Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Forecast Item Owner Version Amount Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsQuantity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesTerritoryId__c</fullName>
        <label>Sales Territory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>